--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 		<link href="assets/plugins/jquery-scrollbar/jquery.scrollbar.css" rel="stylesheet" type="text/css" media="screen" />
 		<link href="assets/plugins/bootstrap-select2/select2.css" rel="stylesheet" type="text/css" media="screen" />
 		<link href="assets/plugins/switchery/css/switchery.min.css" rel="stylesheet" type="text/css" media="screen" />
+		<link href="assets/plugins/bootstrap-daterangepicker/daterangepicker-bs3.css" rel="stylesheet" type="text/css" media="screen" />
+
 		<!-- BEGIN Pages CSS-->
 		<link href="pages/css/pages-icons.css" rel="stylesheet" type="text/css">
 		<link class="main-stylesheet" href="pages/css/pages.css" rel="stylesheet" type="text/css" />
@@ -219,6 +221,9 @@
 									<br>
 									<input type="radio" id="chord" value="chord" v-model="chart_type">
 									<label for="chord" class="text-capitalize semi-bold">chord chart</label>
+									<br>
+									<input type="radio" id="ranking" value="ranking" v-model="chart_type">
+									<label for="ranking" class="text-capitalize semi-bold">ranking chart</label>
 								</div>
 							</div>
 							<div class="col-md-8" v-if="(chart_type === 'bar') || (chart_type === 'line')">
@@ -666,6 +671,69 @@
 								<a href="" id="hidden-chord-download" v-show="false"></a>
 							</div>
 						</div>
+
+
+						<!-- Section: Ranking Chart -->
+						<div class="row m-t-20" v-if="(current_step === 1 && chart_type === 'ranking')">
+							<div class="col-md-12">
+								<h5 class="semi-bold">3. 時間</h5>
+							</div>
+							<div class="col-md-12 m-l-20">
+								<label for="rk-start-time">開始時間</label>
+								<date-picker id="rk-start-time" v-model="ranking.start_time" name="start-time"></date-picker>
+								<br>
+								<label for="rk-end-time">結束時間</label>
+								<date-picker id="rk-start-time" v-model="ranking.end_time" name="end-time"></date-picker>
+							</div>
+
+
+							<div class="col-md-12">
+								<h5 class="semi-bold">4. 排行榜內容</h5>
+							</div>
+
+							<div class="col-md-12">
+								<div class="p-l-20">
+									<button class="btn btn-primary btn-animated from-left" type="button" v-on:click="add_rankingdata()">
+									    <span class="text-capitalize">新增一組資料</span>
+									</button>
+								</div>
+							</div>
+
+							<div v-for="(data, index) in ranking.data" class="col-md-12">
+								<div class="p-l-20">
+									<div class="form-group form-group-default required">
+							        <label class="text-capitalize">內容</label>
+							        <textarea type="text" v-bind:id="'ranking-'+index+'content'" class="form-control custom-height" v-model="data.content" required name="content"></textarea>
+							    </div>
+							    <div class="form-group required">
+							        <label class="text-capitalize">生氣數</label>
+							        <input class="form-control" type="number" v-model="data.angry_cnt">	
+							        <label class="text-capitalize">生氣分數</label>
+							        <input class="form-control" type="number" v-model="data.angry_score">	
+							        <label class="text-capitalize">讚數</label>
+							        <input class="form-control" type="number" v-model="data.like_cnt">	
+							        
+							    </div>
+
+							    <div class="form-group required">
+							    	<label class="text-capitalize">link</label>
+							    	<input class="form-control" type="text" v-model="data.link">
+							    </div>
+
+							    <div class="col-md-6 form-group required">
+							    	<label class="text-capitalize">image</label>
+							    	<input class="form-control" type="text" v-model="data.image">
+							    </div>
+							    <div class="col-md-6">
+							    	<img :src="data.image" alt="" width="100%">
+							    </div>
+								</div>
+								{{data}}
+							</div>
+
+							
+						</div>
+
 						<!-- END PLACE PAGE CONTENT HERE -->
 					</div>
 					<!-- END CONTAINER FLUID -->
@@ -679,7 +747,7 @@
 		<!-- END PAGE CONTAINER -->
 		<!-- BEGIN VENDOR JS -->
 		<script src="assets/plugins/pace/pace.min.js" type="text/javascript"></script>
-		<script src="assets/plugins/jquery/jquery-1.11.1.min.js" type="text/javascript"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="assets/plugins/modernizr.custom.js" type="text/javascript"></script>
 		<script src="assets/plugins/jquery-ui/jquery-ui.min.js" type="text/javascript"></script>
 		<script src="assets/plugins/bootstrapv3/js/bootstrap.min.js" type="text/javascript"></script>
@@ -691,6 +759,13 @@
 		<script src="assets/plugins/jquery-actual/jquery.actual.min.js"></script>
 		<script src="assets/plugins/jquery-scrollbar/jquery.scrollbar.min.js"></script>
 		<script src="assets/plugins/classie/classie.js" type="text/javascript"></script>
+		<script src="https://unpkg.com/moment@2.18.1/min/moment.min.js"></script>
+		<!-- Date-picker itself -->
+		<script src="https://unpkg.com/eonasdan-bootstrap-datetimepicker@4.17.47/build/js/bootstrap-datetimepicker.min.js"></script>
+		<link href="https://unpkg.com/eonasdan-bootstrap-datetimepicker@4.17.47/build/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+		<!-- Lastly add this package -->
+		<script src="https://unpkg.com/vue@2.5/dist/vue.min.js"></script>
+		<script src="https://unpkg.com/vue-bootstrap-datetimepicker"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.3.5/papaparse.js"></script>
 
@@ -700,7 +775,7 @@
 		<!-- END CORE TEMPLATE JS -->
 		<!-- BEGIN PAGE LEVEL JS -->
 
-		<script src="https://unpkg.com/vue"></script>
+		
 		<!-- CDNJS :: Sortable (https://cdnjs.com/) -->
 		<script src="https://cdn.jsdelivr.net/npm/sortablejs@1.7.0/Sortable.min.js"></script>
 		<!-- CDNJS :: Vue.Draggable (https://cdnjs.com/) -->
