Remove test data

--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
 								<hr>
 								<div class="p-l-20">
 									<button class="btn btn-info btn-animated from-left fa fa-eye" type="button" v-on:click="ranking_download_preparation('ranking_result');">
-									    <span class="text-capitalize">預覽ranking</span>
+									    <span class="text-capitalize">準備下載</span>
 									</button>
 									<a class="btn btn-success btn-animated from-left fa fa-download m-l-20" id="download-ranking" download="ranking.html">
 									    <span class="text-capitalize">下載</span>
